--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,4 +1,3 @@
-
 /* Light Mode */
 blockquote, 
 [data-md-color-scheme="default"] h1 {
@@ -23,4 +22,16 @@ blockquote,
 [data-md-color-scheme="slate"] blockquote,
 [data-md-color-scheme="slate"] h1 {
     color: #cccccc !important; 
+}
+
+/* Light Mode */
+[data-md-color-scheme="default"] .resume-date {
+    color: #000000 !important;
+    font-style: italic;
+}
+
+/* Dark Mode */
+[data-md-color-scheme="slate"] .resume-date {
+    color: #cccccc !important;
+    font-style: italic;
 }
